--- a/index.html
+++ b/index.html
@@ -98,49 +98,64 @@
       <div class="scroll-line"></div>
       Scroll to explore
     </div>
-    <div class="hero-stats-row" role="list" aria-label="Key statistics">
-      <div class="hero-stat" role="listitem">
-        <div class="num"><span class="counter" data-target="50">0</span>+</div>
-        <div class="label">Projects</div>
-      </div>
-      <div class="hero-stat" role="listitem">
-        <div class="num"><span class="counter" data-target="98">0</span>%</div>
-        <div class="label">Satisfaction</div>
-      </div>
-      <div class="hero-stat" role="listitem">
-        <div class="num"><span class="counter" data-target="3">0</span>x</div>
-        <div class="label">Faster</div>
-      </div>
-    </div>
   </div>
 </section>
 
-<!-- Marquee -->
-<div class="marquee" aria-hidden="true">
-  <div class="marquee-inner">
-    <span>Web Development</span><span class="sep">&#10038;</span>
-    <span>AI Integration</span><span class="sep">&#10038;</span>
-    <span>UI/UX Design</span><span class="sep">&#10038;</span>
-    <span>Brand Strategy</span><span class="sep">&#10038;</span>
-    <span>Performance</span><span class="sep">&#10038;</span>
-    <span>Custom Apps</span><span class="sep">&#10038;</span>
-    <span>Web Development</span><span class="sep">&#10038;</span>
-    <span>AI Integration</span><span class="sep">&#10038;</span>
-    <span>UI/UX Design</span><span class="sep">&#10038;</span>
-    <span>Brand Strategy</span><span class="sep">&#10038;</span>
-    <span>Performance</span><span class="sep">&#10038;</span>
-    <span>Custom Apps</span><span class="sep">&#10038;</span>
-    <span>Web Development</span><span class="sep">&#10038;</span>
-    <span>AI Integration</span><span class="sep">&#10038;</span>
-    <span>UI/UX Design</span><span class="sep">&#10038;</span>
-    <span>Brand Strategy</span><span class="sep">&#10038;</span>
+<!-- Tools / Tech Stack -->
+<div class="logos-strip" aria-label="Tools and platforms we build with">
+  <p class="logos-heading fade-up">Tools we <em>collaborate</em> with</p>
+  <div class="logos-grid fade-up fd1" role="list">
+
+    <!-- Claude — shaded, cross at bottom-right -->
+    <div class="logo-cell cell-shaded" role="listitem">
+      <img src="https://svgl.app/library/claude-ai-wordmark-icon_light.svg" alt="Claude" class="logo-wordmark">
+      <span class="logo-cross" aria-hidden="true"></span>
+    </div>
+
+    <!-- OpenAI — cross at bottom-right -->
+    <div class="logo-cell" role="listitem">
+      <img src="https://svgl.app/library/openai_wordmark_light.svg" alt="OpenAI" class="logo-wordmark">
+      <span class="logo-cross" aria-hidden="true"></span>
+    </div>
+
+    <!-- Google — shaded, cross at bottom-right -->
+    <div class="logo-cell cell-shaded" role="listitem">
+      <img src="https://svgl.app/library/google-wordmark.svg" alt="Google" class="logo-wordmark">
+      <span class="logo-cross" aria-hidden="true"></span>
+    </div>
+
+    <!-- Cursor -->
+    <div class="logo-cell" role="listitem">
+      <img src="https://svgl.app/library/cursor_wordmark_light.svg" alt="Cursor" class="logo-wordmark">
+    </div>
+
+    <!-- Webflow — icon only -->
+    <div class="logo-cell" role="listitem">
+      <img src="https://svgl.app/library/webflow.svg" alt="Webflow" class="logo-wordmark logo-icon-only">
+    </div>
+
+    <!-- Cloudflare — shaded, icon only -->
+    <div class="logo-cell cell-shaded" role="listitem">
+      <img src="https://svgl.app/library/cloudflare.svg" alt="Cloudflare" class="logo-wordmark logo-icon-only">
+    </div>
+
+    <!-- Vercel -->
+    <div class="logo-cell" role="listitem">
+      <img src="https://svgl.app/library/vercel_wordmark.svg" alt="Vercel" class="logo-wordmark">
+    </div>
+
+    <!-- GitHub — shaded -->
+    <div class="logo-cell cell-shaded" role="listitem">
+      <img src="https://svgl.app/library/github_wordmark_light.svg" alt="GitHub" class="logo-wordmark">
+    </div>
+
   </div>
 </div>
 
 <!-- Services -->
 <section id="services" aria-labelledby="services-heading">
   <div class="section-header">
-    <div class="section-header-left">
+    <div>
       <div class="section-num fade-up"><span class="ln" aria-hidden="true"></span> 01</div>
       <h2 class="section-h2 fade-up fd1" id="services-heading">Digital solutions<br>built with <em>intelligence.</em></h2>
     </div>
@@ -223,7 +238,7 @@
 <!-- Work -->
 <section id="work" aria-labelledby="work-heading">
   <div class="section-header">
-    <div class="section-header-left">
+    <div>
       <div class="section-num fade-up"><span class="ln" aria-hidden="true"></span> 03</div>
       <h2 class="section-h2 fade-up fd1" id="work-heading">Selected<br><em>projects</em></h2>
     </div>
@@ -276,9 +291,9 @@
 <!-- Testimonials -->
 <section id="testimonials" aria-labelledby="testimonials-heading">
   <div class="section-header">
-    <div class="section-header-left">
+    <div>
       <div class="section-num fade-up"><span class="ln" aria-hidden="true"></span> 04</div>
-      <h2 class="section-h2 fade-up fd1" id="testimonials-heading">Trusted by<br>teams that demand<br><em>the best.</em></h2>
+      <h2 class="section-h2 fade-up fd1" id="testimonials-heading">Trusted by teams that demand <em>the best.</em></h2>
     </div>
   </div>
   <div class="test-grid" role="list" aria-label="Client testimonials">
