--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 
 <!-- Apple Touch Icon -->
 <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon.png">
-<meta name="apple-mobile-web-app-title" content="Specific Match">
+<meta name="apple-mobile-web-app-title" content="Riventure — AI-Powered Digital Agency">
 <meta name="apple-mobile-web-app-capable" content="yes">
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<link href="https://api.fontshare.com/v2/css?f[]=cabinet-grotesk@400,500,700,800,900&display=swap" rel="stylesheet">
+<!-- Fonts -->
+<link rel="preload" href="assets/fonts/Inter_18pt-Medium.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="assets/fonts/Inter_18pt-Regular.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="assets/fonts/Inter_18pt-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
+
+<link rel="preload" href="assets/fonts/CabinetGrotesk-Black.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="assets/fonts/CabinetGrotesk-Bold.woff2" as="font" type="font/woff2" crossorigin>
+
 <link href="style.css" rel="stylesheet">
 </head>
 <body>
